# BlocksArgorithm

./: CMakeLists.txt  README.md  algorithm.cpp  main.cpp  task.txt
src/: algorithm.cpp  algorithm.h
tests/: tests.cpp
